--- a/requirements.txt
+++ b/requirements.txt
@@ -42,7 +42,6 @@ requests==2.28.1
 scikit-learn==1.2.0
 scipy==1.9.3
 six==1.16.0
-sklearn==0.0.post1
 sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 TA-Lib==0.4.25
@@ -54,3 +53,5 @@ websocket-client==0.40.0
 Werkzeug==2.2.2
 yfinance==0.2.3
 zipp==3.11.0
+pyfolio==0.9.2
+zipline-reloaded==3.0.4
